--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
  services:
   - type: web
-    name: educational-website
+    name: nxtwallpapers
     env: node
     plan: free
-    startCommand: npm install && node index.js
+    startCommand: npm install && npm start
